--- a/app/config/ezplatform_dev.yml
+++ b/app/config/ezplatform_dev.yml
@@ -5,17 +5,17 @@ ezpublish:
     siteaccess:
         match:
             Compound\LogicalAnd:
-                freelancewebsite:
+                cvwebsite:
                     matchers:
                         Map\URI:
                             fr: true
                         Map\Host:
                             lucasimonin.dev: true
-                    match: freelancewebsite
-                freelancewebsite_en:
+                    match: cvwebsite
+                cvwebsite_en:
                     matchers:
                         Map\URI:
                             en: true
                         Map\Host:
                             lucasimonin.dev: true
-                    match: freelancewebsite_en
+                    match: cvwebsite_en
