--- a/app/config/ezplatform.yml
+++ b/app/config/ezplatform.yml
@@ -1,5 +1,6 @@
 imports:
     - { resource: image_variations.yml }
+    - { resource: views.yml }
 
 ezpublish:
     # Repositories configuration, setup default repository to support solr if enabled
